@@ -21,24 +21,30 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import java.util.*;
 
-
+//TODO implement DI and test id generation
 public class EventTest {
 
     private Event event;
-    private List<Participant> list;
+    private Event event1;
+    private Event event2;
+    List<Participant> list;
 
     @BeforeEach
     void setUp() {
         list = new ArrayList<>();
         list.add(new Participant());
         event = new Event("Test Event", new ArrayList<>());
+        event1 = new Event("Title", List.of(new Participant("Person1", "p1"),
+                new Participant("Person2", "p2")));
+        event2 = new Event("Title", List.of(new Participant("Person1", "p1"),
+                new Participant("Person2", "p2")));
     }
 
     @Test
     void testConstructor() {
         String title = "Test Event";
-        List<Participant> participants = new ArrayList<>();
-        participants.add(new Participant());
+        List<Participant> participants = Arrays.asList(new Participant("Person1", "p1"),
+                new Participant("Person2", "p2"));
         Event event = new Event(title, participants);
         assertEquals(title, event.getTitle());
         assertEquals(participants.size(), event.getParticipants().size());
@@ -60,7 +66,8 @@ public class EventTest {
 
     @Test
     void testCreationDate() {
-        Event event = new Event("Test Event", list);
+        Event event = new Event("Test Event", List.of(
+                new Participant("John Doe", "jd")));
         assertNotNull(event.getCreationDate());
         assertTrue(event.getCreationDate().getTime() <= System.currentTimeMillis());
     }
@@ -83,10 +90,8 @@ public class EventTest {
 
     @Test
     void testSameInstance() {
-        Event event = new Event("Title", list);
-        Event event1;
-        event1 = event;
-        assertEquals(event1, event);
+        Event testEvent = event;
+        assertEquals(testEvent, event);
     }
 
     @Test
@@ -98,52 +103,43 @@ public class EventTest {
 
     @Test
     void testEqualityWithoutId(){
-        Event event1 = new Event("Title", list);
-        Event event2 = new Event("Title", list);
         assertEquals(event1.getTitle(), event2.getTitle());
         assertEquals(event1.getParticipants().size(), event2.getParticipants().size());
         for(int i = 0; i < event1.getParticipants().size(); i++){
             assertEquals(event1.getParticipants().get(i), event2.getParticipants().get(i));
         }
     }
-
-
     @Test
     void testNull() {
-        Event event = new Event("Title", list);
         assertNotEquals(null, event);
     }
 
     @Test
     void testEqualityDifferentClass() {
-        Event event = new Event("Title", list);
         Object other = new Object();
         assertNotEquals(event, other);
     }
 
     @Test
     void testHashConsistency() {
-        Event event1 = new Event("Title", list);
-        Event event2 = new Event("Title", list);
-        assertEquals(event1.hashCode(), event2.hashCode()); // should be equal due to unique ID not
-        // taken into consideration
+        assertEquals(event1.hashCode(), event2.hashCode());
+        // should be equal due to unique ID not taken into consideration
         //can later be tested differently when object persistence is implemented with a database
     }
 
     @Test
     void addingParticipantTest() {
-        Participant participant = new Participant();
+        Participant participant = new Participant("Person123", "test123");
         event.addParticipant(participant);
-        assertEquals(event.getParticipants().get(0), participant);
+        assertEquals(event.getParticipants().getFirst(), participant);
     }
 
     @Test
     void settingParticipantTest(){
         List<Participant> testList = new ArrayList<>();
-        testList.add(new Participant());
-        testList.add(new Participant());
-        testList.add(new Participant());
-        testList.add(new Participant());
+        for(int i = 0; i<4; i++){
+            testList.add(new Participant("Person"+i, "test"+i));
+        }
         Event event1 = new Event("title", null);
         event1.setParticipants(testList);
         Event event2 = new Event("title", testList);
@@ -152,7 +148,7 @@ public class EventTest {
 
     @Test
     void testDeleteParticipant() {
-        Participant participant = new Participant();
+        Participant participant = new Participant("Person", "test");
         event.addParticipant(participant);
         assertTrue(event.deleteParticipant(participant));
         assertFalse(event.getParticipants().contains(participant));
@@ -160,15 +156,15 @@ public class EventTest {
 
     @Test
     void testDeleteNothing() {
-        Participant participant = new Participant();
+        Participant participant = new Participant("Person", "test");
         event.deleteParticipant(participant);
         assertFalse(event.getParticipants().contains(participant));
     }
 
     @Test
     void testParticipantList() {
-        Participant participant1 = new Participant();
-        Participant participant2 = new Participant();
+        Participant participant1 = new Participant("Person123", "test123");
+        Participant participant2 = new Participant("Person123", "test123");
         event.addParticipant(participant1);
         event.addParticipant(participant2);
         event.deleteParticipant(participant1);
